# AI-Powered-Industrial-Anomaly-Detection

./: .impeccable.md  PROBLEM.md  README.md  checklist.md  context.md  pyproject.toml
dashboard/: tsconfig.app.json
dashboard/src/: App.css  App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: EventLog.tsx  FleetPanel.tsx  IncidentAssessment.tsx  PolicyControls.tsx  SensorDetail.tsx
dashboard/src/data/: mockDashboardData.ts
dashboard/src/hooks/: useLiveDashboard.ts
dashboard/src/types/: dashboard.ts
docs/superpowers/specs/: 2026-07-21-bounded-known-fault-design.md  2026-07-21-immediate-milestone-design.md  2026-07-21-live-api-dashboard-design.md  2026-07-21-water-treatment-two-mode-simulator-design.md  2026-07-22-final-state-readme-design.md
iot-streaming-mock/: README.md  main.py  pyproject.toml
iot-streaming-mock/simulator/: __init__.py  consumer.py  fault_models.py  producer.py  test_consumer.py  test_e2e.py  types.py
src/iot_stream/: schemas.py
src/iot_stream/api/: __init__.py  main.py  models.py  runtime.py
src/iot_stream/incidents/: __init__.py  aggregator.py  models.py  policy.py
src/iot_stream/ingestion/: tcp_client.py
src/iot_stream/pipeline/: detectors.py  quality.py  stream_processor.py
test/: __init__.py  helpers.py  test_api_runtime.py  test_detectors.py  test_incidents_policy.py  test_scenarios_integration.py  test_schemas_ingestion.py  test_transport_quality.py
